# Kendall-vnxt

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  mise.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
runtime/: README.md  pyproject.toml
runtime/builder/: README.md
runtime/contracts/: README.md  module-contract.schema.json
runtime/core/: README.md
runtime/core/src/kendall_runtime/: __init__.py  actions.py  batch_timer.py  briefing.py  data_scope.py  inference.py  memory_scope.py  module_api.py  module_contract.py  module_loader.py  module_manager.py  module_manifest.py  module_package_registry.py  module_records.py  module_service_registry.py  (+9 more)
runtime/docs/: core-service-boundaries.md
runtime/modules/: README.md
runtime/modules/outlook/: README.md  module.contract.json
runtime/modules/scheduling/: README.md  module.contract.json
runtime/modules/tasks/: README.md  module.contract.json
runtime/packaging/: README.md
runtime/tests/: README.md  __init__.py  test_batch_timer.py  test_briefing_policy.py  test_core_services.py  test_data_scope.py  test_inference_privacy.py  test_memory_scope.py  test_module_api.py  test_module_loader.py  test_module_manager.py  test_module_manifest.py  test_module_records.py  test_module_services.py  test_orchestration.py  test_release_one_configurer.py  test_release_one_modules.py  test_runtime_bootstrap.py  test_status.py
runtime/tools/: batch_timer.py
services/supervisor/: Dockerfile  README.md  pyproject.toml
(+947 files in other folders)
