[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kendall-runtime"
version = "0.1.0"
description = "Local-first runtime scaffold for the Kendall_Nxt assistant system."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "core/src"}

[tool.setuptools.packages.find]
where = ["core/src"]
