[project]
name = "supervisor"
version = "0.1.0"
description = "Kendall_Nxt BMad supervisor service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx2>=2.3.0",
    "pydantic-settings>=2.10.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.scripts]
supervisor = "supervisor.api.main:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
